--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 #thymeleaf start
+spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
 #开发时关闭缓存,不然没法看到实时页面
